--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
           /></label>
         </div>
       </div>
-      <div class="bottom"></div>
+      <div class="bottom">
+        <div class="submit-container">
+          <button type="submit">Submit</button>
+        </div>
+      </div>
     </div>
   </body>
   <script>
